# django-advanced-survey

./: CHANGELOG.md  README.md  README.rst  requirements.txt  setup.cfg
.github/workflows/: codeql-analysis.yml  pylint.yml
advanced_survey/: admin.py  apps.py  fields.py  models.py  tests.py  urls.py  views.py
advanced_survey/migrations/: 0001_initial.py  0002_auto_20210715_0951.py  0003_remove_question_options_url.py
advanced_survey/static/advanced-survey/: README.md  package-lock.json  package.json
advanced_survey/static/advanced-survey/public/: index.html
advanced_survey/static/advanced-survey/src/: component-exports.ts  index.tsx
advanced_survey/static/advanced-survey/src/direflow-components/: state.tsx  types.tsx
advanced_survey/static/advanced-survey/src/direflow-components/advanced-survey/: App.tsx  index.tsx
advanced_survey/static/advanced-survey/src/direflow-components/field-selector/: index.tsx
advanced_survey/static/advanced-survey/src/direflow-components/is-visible/: index.tsx  is-visible.tsx
advanced_survey/static/advanced-survey/src/direflow-components/options-widget/: index.tsx
advanced_survey/static/advanced-survey/src/direflow-components/page-manager/: index.tsx
advanced_survey/static/advanced-survey/src/direflow-components/previous-answer-selector/: index.tsx
advanced_survey/static/advanced-survey/src/direflow-components/question/: index.tsx  question.css  question.tsx
advanced_survey/templates/: change_form.html
advanced_survey/templates/advanced_survey/: example.html
survey/: settings.py  urls.py
